prod/payment_orchestrator.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-orchestrator
  labels:
    app: payment-orchestrator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-orchestrator
  template:
    metadata:
      labels:
        app: payment-orchestrator
    spec:
      containers:
      - name: payment-orchestrator
        image: httpsantos/payment_orchestrator:2.4
        ports:
        - containerPort: 8081
