prod/orchestrator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-api

spec:
  selector:
    app: payment-orchestrator

  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
