prod/orchestrator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: orchestrator

spec:
  ingressClassName: kong
  rules:
  - host: orchestrator.bloco.live
    http:
      paths:
      - backend:
          service:
            name: orchestrator-api
            port:
              number: 8081
        path: /
        pathType: Prefix
